section-3-error-handling-and-adding-validation-for-category

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=8000
+PORT=6000
 NODE_ENV=development
 
-BASE_URL=http://localhost:8000
+BASE_URL=http://localhost:6000
 
-DB_URI=mongodb://localhost:27017/ecommerce
+DB_URI=mongodb://localhost:27017/e_commerce_cv
