--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch --watch-preserve-output server.js"
+    "start:dev": "node --watch --watch-preserve-output server.js",
+    "start:prod": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6"
