--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "start:dev": "node --watch --watch-preserve-output server.js",
-    "start:prod": "NODE_ENV=production node server.js"
+    "start:prod": "NODE_ENV=production node server.js",
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,16 @@
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "eslint": "^9.25.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-security": "^3.0.1",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3"
   }
 }
